tools/KLEE_SOURCE/Release+Asserts/bin/temp_test/klee-out-18/test000006.ptr.err
Error: memory error: out of bound pointer
File: /home/qirong/Desktop/KLEE_SOURCE/Release+Asserts/bin/link-list1.c
Line: 19
Stack: 
	#0 00000047 in remove_from_list (head=25686112, node=25686688) at /home/qirong/Desktop/KLEE_SOURCE/Release+Asserts/bin/link-list1.c:19
	#1 00000087 in main () at /home/qirong/Desktop/KLEE_SOURCE/Release+Asserts/bin/link-list1.c:38
Info: 
	address: (ReadLSB w64 0 U0:[(Add w32 7
                            N0:(Extract w32 0 (Add w64 18446744073683865552
                                                       (ReadLSB w64 8 a1))))=(Read w8 23 a1),
                   (Add w32 6 N0)=(Read w8 22 a1),
                   (Add w32 5 N0)=(Read w8 21 a1),
                   (Add w32 4 N0)=(Read w8 20 a1),
                   (Add w32 3 N0)=(Read w8 19 a1),
                   (Add w32 2 N0)=(Read w8 18 a1),
                   (Add w32 1 N0)=(Read w8 17 a1),
                   N0=(Read w8 16 a1)] @ const_arr2)
	example: 25712424
	range: [25712424, 25712424]
	next: object at 25712432 of size 8
		MO12[8] allocated at main():  %a1 = alloca %struct.Node_t*
	prev: object at 25711952 of size 4
		MO10[4] allocated at main():  %0 = alloca i32
